# onchain-proof

./: .gitignore  LICENSE  README.md  VERIFY.md  funding.json  pyproject.toml
anchor/: baba_proof_anchor.py
contracts/: BabaProofRegistry.sol  DEPLOY_REMIX.md
examples/: verify_wallet.py
onchain_proof/: __init__.py  __main__.py  abi.py  erc20.py  nav.py  positions.py  provenance.py  rpc.py  venues.py
proofs/: index.json  proof-2026-W28.json  proof-2026-W29.json
tests/: test_abi.py  test_nav_positions.py
